--- a/app/src/main/res/layout/double_item_activity.xml
+++ b/app/src/main/res/layout/double_item_activity.xml
@@ -35,18 +35,6 @@
             tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
         <TextView
-            android:id="@+id/food_name_1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="2dp"
-            android:autoSizeTextType="uniform"
-            android:text="Item Name"
-            android:textColor="#000000"
-            android:textSize="20dp"
-            android:textStyle="bold" />
-
-        <TextView
             android:id="@+id/food_company_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -57,6 +45,20 @@
             android:textColor="#000000"
             android:textSize="14dp"
             android:textStyle="italic" />
+
+        <TextView
+            android:id="@+id/food_name_1"
+            android:layout_width="140dp"
+            android:layout_height="25dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="2dp"
+            android:autoSizeTextType="uniform"
+            android:maxLines="1"
+            android:text="Item Name"
+            android:textAlignment="center"
+            android:textColor="#000000"
+            android:textSize="20dp"
+            android:textStyle="bold" />
 
     </androidx.cardview.widget.CardView>
 
@@ -88,11 +90,13 @@
 
         <TextView
             android:id="@+id/food_name_2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="150dp"
+            android:layout_height="25dp"
             android:layout_gravity="center_horizontal"
             android:layout_margin="2dp"
             android:autoSizeTextType="uniform"
+            android:maxLines="1"
+            android:textAlignment="center"
             android:text="Item Name"
             android:textColor="#000000"
             android:textSize="20dp"
